--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Teremfoglalás, órarend, stb.",
   "main": "app.js",
+  "author": "KD-VT",
   "dependencies": {
     "express": "^4.14.0",
     "ejs": "^2.5.3"
