--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "express": "^4.14.0",
     "ejs": "^2.5.3",
     "body-parser": "^1.15.2",
-    "sqlite3": "^3.1.8"
+    "sqlite3": "^3.1.8",
+    "bootstrap": "^3.3.7",
+    "sequelize": "^3.30.0"
   },
 
   "repository": {
