--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "body-parser": "^1.15.2",
     "sqlite3": "^3.1.8",
     "bootstrap": "^3.3.7",
-    "sequelize": "^3.30.0"
+    "sequelize": "^3.30.0",
+    "angular": "^1.6.1"
   },
 
   "repository": {
