--- a/package.json
+++ b/package.json
@@ -8,10 +8,7 @@
     "express": "^4.14.0",
     "ejs": "^2.5.3",
     "body-parser": "^1.15.2",
-    "sqlite3": "^3.1.8",
-    "bootstrap": "^3.3.7",
-    "sequelize": "^3.30.0",
-    "angular": "^1.6.1"
+    "jquery": "^3.2.1"
   },
 
   "repository": {
