--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "express": "^4.14.0",
     "ejs": "^2.5.3",
     "body-parser": "^1.15.2",
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "cookie-parser": "^1.4.3"
   },
 
   "repository": {
